--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Saharaying's Blog
+title: Saharaying的博客
 email: saharaying@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  tech rails ruby mongodb javascript css
+  Rails Ruby MongoDB Javascript CSS
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://saharaying.com" # the base hostname & protocol for your site
 github_username:  saharaying
